src/objects/Callout_Detail_Headers__mdt.object
<CustomObject>
    <fields>
        <fullName>Callout_Details__c</fullName>
        <label>Callout Details</label>
        <referenceTo>Callout_Details__mdt</referenceTo>
        <relationshipLabel>Callout Detail Headers</relationshipLabel>
        <relationshipName>Callout_Detail_Headers</relationshipName>
        <required>true</required>
        <type>MetadataRelationship</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Value__c</fullName>
        <label>Value</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <label>Callout Detail Headers</label>
    <pluralLabel>Callout Detail Headers</pluralLabel>
</CustomObject>